--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "test": "jest"
+    "dev": "nodemon index.js"
+    ,"test": "jest"
+
   },
   "author": "Diana Montenegro",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "express": "^4.21.1"
-   
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
