--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "nod_tareas_api",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "src/index.js",
+  
   "scripts": {
     "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "test": "jest"
 
   },
